tests/baselines/reference/destructuringParameterDeclaration13.errors.txt
destructuringParameterDeclaration13.ts(5,9): error TS2741: Property 'b' is missing in type '{ c: number; }' but required in type '{ b: number; c?: number | undefined; }'.
destructuringParameterDeclaration13.ts(12,23): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration13.ts(18,9): error TS2741: Property 'b' is missing in type '{}' but required in type '{ b: number; }'.
destructuringParameterDeclaration13.ts(29,23): error TS7031: Binding element 'b' implicitly has an 'any' type.
destructuringParameterDeclaration13.ts(37,31): error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{ a?: number | undefined; }'.
destructuringParameterDeclaration13.ts(38,8): error TS2345: Argument of type '{ a: number; }' is not assignable to parameter of type '{ b: number; a?: number | undefined; }'.
  Property 'b' is missing in type '{ a: number; }' but required in type '{ b: number; a?: number | undefined; }'.
destructuringParameterDeclaration13.ts(42,36): error TS2353: Object literal may only specify known properties, and 'c' does not exist in type '{ b?: number | undefined; }'.
destructuringParameterDeclaration13.ts(43,10): error TS2741: Property 'c' is missing in type '{ b: number; }' but required in type '{ c: number; b?: number | undefined; }'.


==== destructuringParameterDeclaration13.ts (8 errors) ====
    function test1({ a: { b = 1 } } = { a: {} }) {}
    test1({ a: { b: 42 } }); // ok
    
    function test2({ a: { b, c = 1 } } = { a: { b: 2 } }) {}
    test2({ a: { c: 42 } }); // error, missing b
            ~
!!! error TS2741: Property 'b' is missing in type '{ c: number; }' but required in type '{ b: number; c?: number | undefined; }'.
    test2({ a: { b: 100, c: 42 } }); // ok
    
    function test3({ a: { b = 1, c = 2 } } = { a: { b: 3 } }) {}
    test3({ a: { b: 42 } }); // ok
    test3({ a: { c: 42 } }); // ok
    
    function test4({ a: { b } } = { a: {} }) {} // implicit any
                          ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
    test4({ a: { b: 42 } }); // ok (implicit any reported at declaration site)
    test4({ a: {} }); // ok
    
    function test5({ a: { b } = { b: 1 } }) {}
    test5({ a: { b: 42 } }); // ok
    test5({ a: {} }); // error, missing b
            ~
!!! error TS2741: Property 'b' is missing in type '{}' but required in type '{ b: number; }'.
!!! related TS2728 destructuringParameterDeclaration13.ts:16:31: 'b' is declared here.
    
    function test6({ a: { b = 1 } = {} }) {}
    test6({ a: { b: 42 } }); // ok
    test6({ a: {} }); // ok
    
    function test7({ a: { b = 1 } = {} } = {}) {}
    test7({ a: { b: 42 } }); // ok
    test7({ a: {} }); // ok
    test7({}); // ok
    
    function test8({ a: { b, c = 1 } = {} }) {} // implicit any
                          ~
!!! error TS7031: Binding element 'b' implicitly has an 'any' type.
    test8({ a: { b: 42 } }); // ok (implicit any reported at declaration site)
    test8({ a: { b: 42, c: 100 } }); // ok
    
    function test9({ a: { b, c = 1 } = { b: 2 } }) {}
    test9({ a: { b: 42 } }); // ok
    test9({ a: { b: 42, c: 100 } }); // ok
    
    function test10({ a = 1 } = { b: 2 }) {} // error, EPC
                                  ~
!!! error TS2353: Object literal may only specify known properties, and 'b' does not exist in type '{ a?: number | undefined; }'.
    test10({ a: 42 }); // error, missing b
           ~~~~~~~~~
!!! error TS2345: Argument of type '{ a: number; }' is not assignable to parameter of type '{ b: number; a?: number | undefined; }'.
!!! error TS2345:   Property 'b' is missing in type '{ a: number; }' but required in type '{ b: number; a?: number | undefined; }'.
!!! related TS2728 destructuringParameterDeclaration13.ts:37:31: 'b' is declared here.
    test10({ b: 42 }); // ok
    test10({ a: 42, b: 100 }); // ok
    
    function test11({ a: { b = 1 } = { c: 2 } }) {} // error, EPC
                                       ~
!!! error TS2353: Object literal may only specify known properties, and 'c' does not exist in type '{ b?: number | undefined; }'.
    test11({ a: { b: 42 } }); // error, missing c
             ~
!!! error TS2741: Property 'c' is missing in type '{ b: number; }' but required in type '{ c: number; b?: number | undefined; }'.
!!! related TS2728 destructuringParameterDeclaration13.ts:42:36: 'c' is declared here.
    test11({ a: { c: 42 } }); // ok
    
    function test12({ a: { b = 1 } = {}, c = 2 } = { a: {} }) {}
    test12({ a: { b: 42 } }); // ok
    test12({ a: { b: 42 }, c: 100 }); // ok
    test12({ a: {}, c: 100 }); // ok
    test12({ c: 100 }); // ok
    test12({}); // ok
    
    function test13({ a: { b = 1 } = {}, c = 2 } = {}) {}
    test13({ a: { b: 42 } }); // ok
    test13({ c: 100 }); // ok
    
    export {};
    